--- a/tesi.tex
+++ b/tesi.tex
@@ -177,13 +177,21 @@ The application uses the VTK libraries to load the Dicom files (or MHA or VTI fi
 \begin{description}
 
 \item[Main] \hfill \\
-This class has the main function which is obviously the entry point for the program. The command line options are passed at the SmartVolume class, then a custom rendering pipeline is set up wo allow postprocessing (in the vtkStereoDistortPass) for the split vision and the barrel distortion, then we use a utility class defined here to enable Oculus headpose tracking before finally starting the application. 
+This class has the main function which is obviously the entry point for the program. The command line options are passed at the SmartVolume class, then a custom rendering pipeline is set up wo allow postprocessing (in the vtkStereoDistortPass) for the split vision and the barrel distortion, then we use a utility class defined here to enable Oculus headpose tracking before finally starting the application.
+%DIDASCALIE IMMAGINI? SPAZIARE MEGLIO?
+\includegraphics[width=1.0\linewidth]{img/main_using.PNG}
 
 \item [SmartVolume]
+
 This class can receive command line options (you can pass them through the Init method) which are described in the PrintUsage function. The purpose of this class is to create the graphical environment(window with model and interactions), to load the requested input data (which MUST be passed through string arguments, if DEBUG is enabled it opens the "abdomen" DICOM dataset in the project folder), tovisualize it with the requested blending mode (which are the different ways to map the dataset density values to the desired RGBA data) and to offer interaction with it through mouse and keyboard.
+
+\centerline{\includegraphics[width=0.5\linewidth]{img/smartvolumetricdemo_startscreen.PNG}}
 
 With the mouse you can rotate the model and interact with an optional bounding box around the model which allows you to cross section the dataset on your desired plane.
 With the keyboard you can change the blending mode, reset the model position, change the opacity levels.
+
+\includegraphics[width=0.5\linewidth]{img/smartvolumetricdemo_blending.PNG}
+\includegraphics[width=0.5\linewidth]{img/smartvolumetricdemo_crosssection.PNG}
 
 The key bindings are in the KeypressCallbackFunction function, while the mouse interaction is defined in the VTK default  vtkInteractor.
 
@@ -195,12 +203,22 @@ Some local variables of significance:
 \end{itemize}
 \item[vtkStereoDistortPass] \hfill \\
 This class intervenes at every rendering cycle. At a conceptual level, it renders the scene two times from two slightly translated positions, and then puts them together after barrel distorting them.
+This is the scene rendered two times
+\includegraphics[width=1.0\linewidth]{img/stereodistortpass_stereoonly.PNG}
+
+You can see here the translated eye position
+
+\includegraphics[width=1.0\linewidth]{img/stereodistortpass_eyedistance.PNG}
+
 This is realized by using a fragment shader with two textures as input. It needs a value for the InterPupillaryDistance to be set. A lot of code is just setup for the Textures, the FBOs and the ShaderProgram.
 
+
 The fragment shader (distortion.fs) determines whether the pixel is in the left or the right part of the screen and calculates distortion coordinates accordingly (using parameters set in the vtkStereoDistortPass Class. Then it takes the corresponding pixel color from the determined texture in which the two rendered scenes are stored.
-Almost all the "technical" code is based on the VTK vtkGaussianBlurPass source code.
+Almost all of the OpenGL and graphical setup code is based on the VTK vtkGaussianBlurPass source code.
 \item[Oculus\_middleware] \hfill \\
 This class is used as a class used to initializate the Oculus and return hardware related information such as the head pose and textures size.
+
+\includegraphics[width=1.0\linewidth]{img/rift_middleware.PNG}
 
 \end{description}
 
