ridotta immagino oculus per non far andare testo nella pagina 3

--- a/tesi.tex
+++ b/tesi.tex
@@ -92,7 +92,8 @@ Volumetric rendering is the name used to describe techniques used to display a 2
 
 %%%
 \subsection{The Oculus Rift}
-\includegraphics[scale=0.5]{oculus.jpg}
+
+\includegraphics[width=0.6\linewidth]{oculus.jpg}
 
 The Oculus Rift  is a virtual reality headset by Oculus VR that offer the user a fully immersive experience so they can see and interact with the application as if he was seeing with his own eyes instead of looking at a monitor. As of today the most advanced model is the DK2, for this project we're using the DK1. Our application is not compatible with DK2 because the approach we used is not supported on the newer model and the updated approach needs a more in-depth knowledge of the OpenGL pipeline. Luckily anyone with the required knowledge can further develop our application and make it compatible by modifying the code where the distortion is applied (More details on later sections).
 
